fix(eighth): don't show unnecessary scrollbar in activity detail pane

--- a/intranet/static/css/eighth.signup.scss
+++ b/intranet/static/css/eighth.signup.scss
@@ -422,7 +422,7 @@ $headerblue: #0048ab;
     //margin-right: -451px;
     background-color: $color6;
     z-index: 999;
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 
     dt {
